--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Lead generation tool</title>
 </head>
 <body>
-  <div id="st-embeddable" class="st-form st-custom-embed-131" lang="it">
+  <div id="st-embeddable" class="st-form st-custom-embed-1" lang="it">
     <div class="st-form-title">Analisi SEO del tuo sito web</div>
     <div class="st-form-subtitle">Ottieni un Report SEO gratuito</div>
     <div class="st-form-fields">
@@ -23,6 +23,6 @@
     <button id="st-form-cta-button" class="st-form-cta-button st-form-button m-b-xs" style="color: rgb(255, 255, 255); background: rgb(255, 136, 0) none repeat scroll 0% 0%;">Analizza</button>
     </div>
     <div id="st-form-message" class="st-form-message"></div>
-    </div><script>(function(d, s, id,w,cId,eId){w._stoEmbed={campaignId:cId,embedId:eId};var js, fjs = d.getElementsByTagName(s)[0];if (d.getElementById(id)) {return;}js = d.createElement(s); js.id = id;js.src = "http://localhost:8080/app/modules/leadgeneration/sdk/sto-sdk.js?v=kSF0vfcKns8H";fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'sto-jssdk',window,153,131));</script>
+    </div><script>(function(d, s, id,w,cId,eId){w._stoEmbed={campaignId:cId,embedId:eId};var js, fjs = d.getElementsByTagName(s)[0];if (d.getElementById(id)) {return;}js = d.createElement(s); js.id = id;js.src = "https://stocdn.s3-eu-west-1.amazonaws.com/sto-sdk.min.js";fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'sto-jssdk',window,1,1));</script>
 </body>
 </html>
