--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <button id="st-form-cta-button" class="st-form-cta-button st-form-button m-b-xs" style="color: rgb(255, 255, 255); background: rgb(255, 136, 0) none repeat scroll 0% 0%;">Analizza</button>
     </div>
     <div id="st-form-message" class="st-form-message"></div>
-    </div><script>(function(d, s, id,w,cId,eId){w._stoEmbed={campaignId:cId,embedId:eId};var js, fjs = d.getElementsByTagName(s)[0];if (d.getElementById(id)) {return;}js = d.createElement(s); js.id = id;js.src = "https://stocdn.s3-eu-west-1.amazonaws.com/sto-sdk.min.js";fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'sto-jssdk',window,1,1));</script>
+    </div><script>(function(d, s, id,w,cId,eId){w._stoEmbed={campaignId:cId,embedId:eId};var js, fjs = d.getElementsByTagName(s)[0];if (d.getElementById(id)) {return;}js = d.createElement(s); js.id = id;js.src = "http://localhost:8080/app/modules/leadgeneration/sdk/sto-sdk.js?v=Pn4AlT9bmMFf";fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'sto-jssdk',window,1,1));</script>
 </body>
 </html>
